package com.example;

public class InvalidPriorityException extends Exception
{
    public InvalidPriorityException(String message) {
        super(message);
    }
}
