package com.example;
public interface Statsable {
    int getTotalTasks();
    double getAveragePriority();
}